--- a/default.project.json
+++ b/default.project.json
@@ -1,16 +1,13 @@
 {
-	"name": "roblox-ts-model",
-	"globIgnorePaths": [
-		"**/package.json",
-		"**/tsconfig.json"
-	],
-	"tree": {
-		"$path": "out",
-		"include": {
-			"$path": "include",
-			"node_modules": {
-				"$path": "node_modules/@rbxts"
-			}
-		}
-	}
+    "name": "MainModule",
+    "globIgnorePaths": ["**/package.json", "**/tsconfig.json"],
+    "tree": {
+        "$path": "out",
+        "include": {
+            "$path": "include",
+            "node_modules": {
+                "$path": "node_modules/@rbxts"
+            }
+        }
+    }
 }
